Spotify clone done

--- a/index.html
+++ b/index.html
@@ -1,44 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Spotify</title>
   </head>
   <body>
-    Premium Discover Help Download
+    <nav class="nav-bar">
+      <img src="images/spotify-logo.png" class="spotify-logo">
+      <ul class="nav-bar-ul">
+        <li class="nav-bar-item">Premium</link>
+        <li class="nav-bar-item">Discover</link>
+        <li class="nav-bar-item">Help</link>
+        <li class="nav-bar-item">Download</li>
+      </ul>
+    </nav>
 
-    Music for everyone.
-    Spotify is now free on mobile, tablet and computer.
-    Listen to the right music, wherever you are.
+    <section class="background-image">
+      <div class="landing-text">
+        <h1>Music for everyone.</h1> <br>
+        <h4>Spotify is now free on mobile, tablet and computer.</h4>
+        <h4>Listen to the right music, wherever you are.</h4>
+      <div>
+  </section>
+    
+    <div class="cont-underline"> 
+      <span class="underline">What’s on Spotify?</span>
+      </div>
+  
+      <div class="container">
+        <section>
+          <div>
+              <img src="images/music-icon.png"  class=" first-image" alt="million-songs-icon"/>
+              <h3>Millions of Songs</h3>
+              <p id="songs">There are millions of</br>songs on Spotify</p>
+            </div>
+        </section>
+          <section>
+            <div>
+                <img src="images/high-quality-icon.png" class=" second-image"alt="hd-music-icon"/>
+                <h3>HD Music</h3>
+                <p id="songs-dos">Listen to music as if you</br> were listening live</p>
+            </div>
+          </section>
+          <section>
+           <div>
+             <img src="images/devices-icon.png" class=" third-image"alt="stream-everywhere-icon">
+             <h3>Stream Everywhere</h3>
+             <p id="songs-tres">Stream music on your</br>smartphone, tablet or</br>computer</p>
+          </div>
+          </section>
+      </section>
+      </div>
+  
 
-    What’s on Spotify?
-
-    Millions of Songs
-    There are millions of
-    songs on Spotify
-
-    HD Music
-    Listen to music as if you
-    were listening live
-
-    Stream Everywhere
-    Stream music on your
-    smartphone, tablet or
-    computer
-
-    It’s as yeezy as Kanye West.
-    Search
-    Know what you want to listen to?
-    Just search and hit play.
-    Browse
-    Check out the latest charts,
-    brand new releases and great
-    playlists for right now.
-    Discover
-    Enjoy new music every Monday
-    with your own personal playlist.
-    Or sit back and enjoy Radio.
+    <section class="bottom-container">
+      <section class="white-text">
+      <div class="title-space">
+        <span id="bottom-span">It’s as yeezy as Kanye West.</span>
+      </div>
+      <div> 
+        <h3 class="modified-letter">Search</h3>
+        <p class="bottom-p">Know what you want to listen to? Just search and hit play.</p>
+      </div>
+      <div>
+        <h3 class="modified-letter">Browse</h3>
+        <p class="bottom-p">Check out the latest charts, brand new releases and great playlists for right now.</pclass="bottom-p">
+      </div>
+      <div>
+        <h3 class="modified-letter">Discover</h3>
+        <p class="bottom-p">Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
+      </div>
+    </section>
+    <section class="kanye">
+      <div>
+        <img src="images/spotify-app.jpg" class="artist-image" alt="Kanye West">
+      </div>
+    </section>
+    <section class="logo"> 
+      <div>
+       <img src="images/spotify-icon-white.png" class=bottom-logo alt="logo">
+       </div>
+    </section>
+  </section>
   </body>
 </html>
